--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+roxmltree = "0.13.1"
 serde_derive = "1.0.118"
 serde = "1.0.118"
 serde-xml-rs = "0.4.0"
