--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ RUST_LOG=debug
 RUST_BACKTRACE=1
 ADDRESS=127.0.0.1:3000
 COMPANY=CRONUS
-ENVIRONMENT=test
-ODATA_HOST=instance.azure.com:7048
+ODATA_HOST=https://instance.azure.com:7048/ODatav4/
 NAV_USER=Your Business Central Username
 NAV_PASSWORD=Your Business Central Password
 
